--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,29 @@
 # Dependencies
-/node_modules
-/vendor
+node_modules/
+.pnp
+.pnp.js
 
-# Environment files
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Misc
+.DS_Store
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.log
 
-# IDE files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
+# Editor directories and files
+.idea
+.vscode
+*.swp
+*.swo
 
 # OS generated files
 .DS_Store
@@ -22,10 +34,5 @@
 ehthumbs.db
 Thumbs.db
 
-# Build output
-/dist
-/build
-*.log
-
-# Cache
-.cache/
+# CMS specific
+public/admin/index.html
