--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,12 @@
 backend:
-  name: github
-  repo: jackdamnielzz/maasisovm
+  name: git-gateway
   branch: master
-  auth_endpoint: oauth
-  site_domain: localhost:50242
-  client_id: Ov23licrdQC7mQor8i2b
+  commit_messages:
+    create: 'Create {{collection}} "{{slug}}"'
+    update: 'Update {{collection}} "{{slug}}"'
+    delete: 'Delete {{collection}} "{{slug}}"'
+    uploadMedia: 'Upload "{{path}}"'
+    deleteMedia: 'Delete "{{path}}"'
 
 # Media and public assets
 media_folder: static/images
